# ai-learning

./: .gitignore  LICENSE  MCP安装-fetch.md  README.md  temp.txt
00-temp/: AI提示词笔记.txt  学习笔记的提示词.txt
01-Agent 实战项目/: 00-Agent提示词规范.md
01-Agent 面试题库/: 01-LLM基础与上下文管理.md  02-Agent基础与架构.md  03-多Agent协作与编排.md  04-Agent提示词工程.md  05-Agent平台与框架.md  06-Agent应用与实践.md  07-Agent安全与合规.md  08-Agent生产部署与评估.md  README.md
02-Skill 实战项目/: skill_develop_guideline.md  skill_develop_rule.md  universal_develop_rule.md
02-Skill 面试题库/: 01-Agent-Skill基础概念篇.md  02-Skill类型与触发机制篇.md  03-Claude-Code-Skill平台篇.md  04-跨平台Skill对比篇.md  05-Skill开发规范篇.md  06-架构设计决策篇.md  07-Prompt工程设计篇.md  08-MCP协议与集成篇.md  09-实战项目开发篇.md  10-Multi-Agent与进阶篇.md  11-综合场景开放题篇.md  README.md
03-MCP 实战项目/mcp-python/mcp-case-converter/: README.md  pyproject.toml
03-MCP 实战项目/mcp-python/mcp-case-converter/src/mcp_case_converter/: __init__.py  __main__.py
03-MCP 实战项目/mcp-python/mcp-case-converter/src/mcp_case_converter/entrypoints/: mcp.py
03-MCP 实战项目/mcp-python/mcp-case-converter/tests/: test_converter.py
03-MCP 面试题库/: 01-基础概念与术语.md  02-协议与消息模型.md  03-核心原语-Tools-Resources-Prompts.md  04-传输层-Stdio-SSE-HTTP.md  05-开发实践与SDK.md  06-安全最佳实践.md  07-生态与集成.md  08-多Agent与进阶.md  09-综合模拟面试题.md  README.md
04-SDD 学习笔记/: 01-SDD-核心概念与价值.md  02-SDD-标准流程与阶段划分.md  03-SDD-规范文档模板详解.md  04-SDD-工具落地与工作流整合.md  05-SDD-端到端案例-Git提交统计CLI.md  06-SDD-Token成本与项目规模档位.md  07-SDD-跨栈协作-前端+后端+DB.md  08-SDD-AI代码可读性与人工接手.md  09-SDD-测试策略-常规+压力+回归.md  10-SDD-Brownfield存量项目改造.md  11-SDD-常见误区与渐进落地.md  12-SDD-模型职责分工与边界点.md  13-SDD-人和模型的职责分工.md  README.md  (+2 more)
(+447 files in other folders)
